Update a.sh